samples/_failures_safe/1761316329_8b57cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c298148d.c: In function ‘main’:
./samples/SAFE/__tmp_c298148d.c:162:24: error: expected ‘;’ at end of input
  162 |         cleanup_context
      |                        ^
      |                        ;
./samples/SAFE/__tmp_c298148d.c:162:9: error: expected declaration or statement at end of input
  162 |         cleanup_context
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c298148d.c:162:9: error: expected declaration or statement at end of input
